# dl_assigment_3

./: .gitignore  README.md  STUDY_GUIDE.md  conv_nets.py  data_utils.py  linear_svm.py  main.py  metrics.py  pneumonia_project.ipynb  pyproject.toml  solver.py
